# xssmap

./: CMakeLists.txt  Makefile  benchmark.c
src/: http.c  main.c  scanner.c  utils.c  xssmap.h
src/techniques/: advanced.c  attrbreak.c  dombreak.c  domparser.c  eventhand.c  popup.c  scriptinj.c  svgmath.c  taginj.c  techniques.h  uriinj.c  verify.c
